# ml-ops-quickstart

./: .buildinfo  .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .travis.yml  .travis_sample.yml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  WHAT_MLOQ_GENERATED.md  _mloq.yml  _travis.yml  genindex.html  index.html  mloq.yaml  mloq.yml  objects.inv  py-modindex.html  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/: dependabot.yml
.github/workflows/: build-source.yml  build-test-pypi.yml  build-wheels-bin.yml  bump-version.yml  deploy-docs.yml  deploy-source.yml  deploy-wheels.yml  deploy.yml  lint-and-pytest.yml  lint-and-test.yml  push.yml  python-package.yml  release-package.yml  test-docker.yml  test.yml
_autoapi_templates/: index.html
_modules/: index.html
_modules/mloq/: _utils.html  cli.html  command.html  custom_click.html  failure.html  files.html  git.html  record.html  runner.html  templating.html  writer.html
_modules/mloq/commands/: ci.html  docker.html  docs.html  globals.html  license.html  lint.html  package.html  project.html  requirements.html  setup.html
_modules/mloq/config/: configuration.html  custom_click.html  param_patch.html  prompt.html
_sources/: index.md.txt
_sources/_autoapi_templates/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/mloq/: index.rst.txt
_sources/markdown/: tutorial.md.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/mloq/: index.html
autoapi/mloq/__main__/: index.html
autoapi/mloq/_utils/: index.html
autoapi/mloq/cli/: index.html
autoapi/mloq/command/: index.html
autoapi/mloq/commands/: index.html
autoapi/mloq/config/: index.html
autoapi/mloq/custom_click/: index.html
autoapi/mloq/failure/: index.html
autoapi/mloq/files/: index.html
autoapi/mloq/git/: index.html
autoapi/mloq/record/: index.html
autoapi/mloq/runner/: index.html
autoapi/mloq/templating/: index.html
autoapi/mloq/version/: index.html
autoapi/mloq/writer/: index.html
docs/: Makefile  requirements-build.txt  requirements-docs.txt
docs/source/: __index.rst  assets  conf.py  index.md
docs/source/_autoapi_templates/: index.rst
docs/source/_static/: mloq.yml
docs/source/guide/: features.md  library.md  usage.md  welcome.md
docs/source/markdown/: features.md  library.md
markdown/: features.html  library.html  tutorial.html  usage.html  welcome.html
mloq/: __api.py  __command.py  __init__.py  __main__.py  __workflows.py  _command.py  _mloq.yml  _new_command.py  _requirements.py  _writer.py  api.py  check.py  cli.py  command.py  directories.py  failure.py  files.py  git.py  params.py  parse_config.py  record.py  requirements.py  requirements_config.py  runner.py  skeleton.py  templating.py  version.py  workflows.py  writer.py
mloq/_tests/: test_api.py  test_requirements.py  test_workflows.py
mloq/_tests/cli/: cli_inputs.py  test_main.py
mloq/_tests/config/: test_generation.py  test_logic.py
mloq/assets/configs/: docs.yml  git_workflows.yml  package.yml  requirements.yml
mloq/assets/docker/: Dockerfile
mloq/assets/requirements/: data-science.txt  (+6 more)
mloq/assets/templates/: .codecov.yml  APACHE_LICENSE  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MIT_LICENSE  Makefile  README.md  WHAT_MLOQ_GENERATED.md  code_of_conduct.md  conf.txt  index.md  main.txt  makefile.docker  mloq.yaml  mloq.yml  push.yml  pyproject.toml  rename_testpypi_wheels.py  setup.py  setup.txt  test_main.txt
mloq/cli/: __docs_cmd.py  __main.py  __package_cmd.py  __setup_cmd.py  custom_prompt.py  docs_cmd.py  main.py  package_cmd.py  requirements_cmd.py  root_cmd.py  setup_cmd.py  workflows_cmd.py
mloq/commands/: __init__.py  ci.py  docker.py  docs.py  globals.py  license.py  lint.py  package.py  project.py  requirements.py  setup.py
mloq/config/: __docs_generation.py  __init__.py  __logic.py  __package_generation.py  __params.py  __setup_generation.py  configuration.py  custom_click.py  docs_generation.py  generation.py  logic.py  package_generation.py  param_patch.py  params.py  prompt.py  requirements_generation.py  root_generation.py  setup_generation.py  workflows_generation.py
mloq/configuration/: config_values.py  configuration.py  core.py
mloq/old/: __api.py  __command.py  __workflows.py  _requirements.py
mloq/test/: test_command.py  test_record.py  test_runner.py  test_writer.py
mloq/tests/: conftest.py  dummy_reqs.txt  mloq.yml  repository.yaml  test_api.py  test_parse_config.py  test_record.py  test_requirements.py  test_runner.py  test_workflows.py  test_writer.py
mltemplate/: .travis.yml  __main__.py  api.py  directories.py  files.py  parse_config.py  requirements.py  requirements_config.py  templating.py  travis.yml  workflows.py
mltemplate/assets/: .coveragerc  LICENSE  Makefile
mltemplate/ci/: commands.py  core.py  jobs.py  new_travis.py  pipelines.py  scripts.py  stages.py  travis.py  writers.py  yaml_order.py
mltemplate/test/: test_pipelines.py  test_scripts.py  test_stages.py  test_writer.py
mltemplate/tests/: .travis.yml  dummy_reqs.txt  test_api.py  test_jobs.py  test_parse_config.py  test_pipelines.py  test_requirements.py  test_stages.py  test_writer.py
scripts/: bump-pypy-test-version.sh  makefile.docker  rename_testpypi_wheels.py
src/mloq/: __init__.py  __main__.py  _utils.py  cli.py  command.py  failure.py  files.py  runner.py  templating.py  version.py  writer.py
src/mloq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mloq/assets/shared/: Makefile  README.md  pyproject.toml
tests/: __init__.py  test_command.py  test_record.py  test_runner.py  test_writer.py
tests/commands/: test_ci.py  test_docker.py  test_docs.py  test_globals.py  test_license.py  test_lint.py  test_package.py  test_project.py  test_setup.py
tests/config/: fixtures.py  test_configuration.py  test_param_patch.py
tests/examples/: mloq.yaml  mloq.yml
(+204 files in other folders)
