[build-system]
requires = ["setuptools >= 50.3.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
line_length = 99
multi_line_output = 3
order_by_type = false
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true
combine_as_imports = true
include_trailing_comma = true
color_output = true
lines_after_imports = 2

# Code coverage config
[tool.coverage.run]
branch = true
source = ["mloq"]

[tool.coverage.report]
exclude_lines =["no cover",
    'raise NotImplementedError',
    'if __name__ == "__main__":']
ignore_errors = true
omit = ["mloq/tests/*", "mloq/cli/custom_prompt.py"]

[tool.pylint.master]
ignore = ['tests', "custom_prompt.py"]
load-plugins =' pylint.extensions.docparams'

[tool.pylint.messages_control]
disable = 'all,'
enable = """,
         missing-param-doc,
         differing-param-doc,
         differing-type-doc,
         missing-return-doc,
         """

# Flakehell config
[tool.flakehell]
# optionally inherit from remote config (or local if you want)
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
# specify any flake8 options. For example, exclude "example.py":
exclude = [".git", "docs", ".ipynb*", "*.ipynb", ".pytest_cache"]
format = "grouped" # make output nice
max_line_length = 99
show_source = true # show line of source code in output
inline_quotes='"'
import_order_style = "appnexus"
application_package_names = ["mloq"]
application_import_names = ["mloq"]

[tool.flakehell.plugins]
'flake8*' = ["+*"]
pylint = ["+*"]
pyflakes = ["+*"]
pycodestyle = ["+*" , "-D100", "-D104", "-D301", "-W503", "-W504"]

# No docs in the tests. Whatever.
[tool.flakehell.exceptions."**/tests/*"]
pycodestyle = ["-D*"]
"flake8*" = ["-D*"]

[tool.flakehell.exceptions."**/assets/*"]
pycodestyle = ["-*"]
pyflakes = ["-*"]
"flake8*" = ["-*"]
